2008-09-02  H.J. Lu  <hongjiu.lu@intel.com>

	* gcc.target/i386/amd64-abi-3.c: New test.
	* gcc.target/i386/amd64-abi-4.c: Likewise.
	* gcc.target/i386/amd64-abi-5.c: Likewise.
	* gcc.target/i386/amd64-abi-6.c: Likewise.

2008-09-02  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/36766
	* g++.dg/tree-ssa/pr36766.C: New test.

	PR target/36332
	* gcc.c-torture/execute/ieee/pr36332.c: New test.

	PR c/37171
	* g++.dg/ext/attrib34.C: New test.

2008-09-02  Sebastian Pop  <sebastian.pop@amd.com>
	    Tobias Grosser  <grosser@fim.uni-passau.de>
	    Jan Sjodin  <jan.sjodin@amd.com>
	    Harsha Jagasia  <harsha.jagasia@amd.com>
	    Dwarakanath Rajagopal  <dwarak.rajagopal@amd.com>
	    Konrad Trifunovic  <konrad.trifunovic@inria.fr>
	    Adrien Eliche  <aeliche@isty.uvsq.fr>

	Merge from graphite branch.
	* gcc.dg/graphite/scop-{0,1,2,3,4,5,6,7,8,9,
	10,11,12,13,14,15,16,17,18}.c: New.
	* gcc.dg/graphite/graphite.exp: New.
	* gcc.dg/graphite/scop-matmult.c: New.
	* gcc.dg/graphite/block-0.c: New.
	* lib/target-supports.exp (check_effective_target_fgraphite): New.
	* gfortran.dg/graphite/block-1.f90: New.
	* gfortran.dg/graphite/scop-{1,2}.f: New.
	* gfortran.dg/graphite/block-{1,3,4}.f90: New.
	* gfortran.dg/graphite/graphite.exp: New.
	
2008-09-02  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/37327
	* gcc.c-torture/compile/pr37327.c: New testcase.

2008-09-02  Victor Kaplansky  <victork@il.ibm.com>

	* gcc.dg/fastmath-2.c: New.
    
2008-09-02  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/37095
	* g++.dg/inherit/thunk9.C: New test.

2008-09-01  Jerry DeLisle  <jvdelisle@gcc.gnu.org>

	PR fortran/37228
	* gfortran.dg/fmt_g0_4.f08: Revised test.

2008-09-02  Daniel Kraft  <d@domob.eu>

	* gfortran.dg/abstract_type_1.f90: New test.
	* gfortran.dg/abstract_type_2.f03: New test.
	* gfortran.dg/abstract_type_3.f03: New test.
	* gfortran.dg/abstract_type_4.f03: New test.

2008-09-01  Aldy Hernandez  <aldyh@redhat.com>
