@@ -1,6 +1,6 @@
 /* { dg-do compile } */
-/* Currently ICEs for MIPS, CRIS and PowerPC; see PR33642.  */
-/* { dg-xfail-if "PR33642" { mips*-*-* powerpc*-*-linux* cris-*-* crisv32-*-* } { "*" } { "" } } */
+/* Currently ICEs for HPPA, MIPS, CRIS and PowerPC; see PR33642.  */
+/* { dg-xfail-if "PR33642" { hppa*-*-* mips*-*-* powerpc*-*-linux* cris-*-* crisv32-*-* } { "*" } { "" } } */
 /* Currently ICEs for (x86 && ilp32 && pic).  */
 /* { dg-xfail-if "PR33642/36240" { { i?86-*-* x86_64-*-* } && { ilp32 && { ! nonpic } } } { "*" } { "" } } */
 /* { dg-prune-output ".*internal compiler error.*" }
