@@ -1,3 +1,8 @@
+2008-09-02  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>
+
+	* gcc.c-torture/compile/pr33009.c: xfail on hppa*-*-*.
+	* gcc.c-torture/compile/pr11832.c: Likewise.
+
 2008-09-02  H.J. Lu  <hongjiu.lu@intel.com>
 
 	* gcc.target/i386/amd64-abi-3.c: New test.
